# device-management

./: README.md  pyproject.toml
device_management/: device.py  dwelling.py  fake_api.py  hub.py
tests/: conftest.py  test_devices.py  test_dwellings.py  test_hubs.py
